# micro-services-exercise

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
app/: .coveragerc  entities.py  main.py  schemas.py  services.py
app/tests/: conftest.py  entities.py  movies_details_example.py
app/tests/integration/: test_main.py
app/tests/unit/: conftest.py  test_main.py  test_services.py
